# goulash

tests/graveyard/: CMakeLists.txt  Makefile  Makefile-tce-rocmcc  TODO  buildScript.sh  main.cpp  suskevi.h
tests/graveyard/host_configs/: lc-rzadams.cmake
tests/graveyard/lib_f/: CMakeLists.txt  Makefile
tests/graveyard/lib_h/: CMakeLists.txt  Makefile  suskevi.cpp
tests/graveyard/libionian/: Notes.txt
tests/graveyard/libionian/src/: CMakeLists.txt  ionian-config.cmake.in  ionian.cpp  ionian.h
tests/graveyard/libpindus/: CMakeLists.txt  Makefile  Notes.txt  pindus_mod.f90  pindus_mod.h
tests/graveyard/libpindus/src/: CMakeLists.txt  pindus-config.cmake.in  pindus_mod.f90  pindus_mod.h
tests/graveyard/src/: CMakeLists.txt  main.cpp  main_nordc.cpp
